[package]
name = "launcher"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.6"
nix = "0.17"
same-file = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
tempdir = "0.3"

# Size optimizations
# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
codegen-units = 1
